--- a/.github/workflows/HelloWorld.yml
+++ b/.github/workflows/HelloWorld.yml
@@ -8,3 +8,13 @@ jobs:
     - uses: actions/checkout@v3
     - name: Run a one-line script
       run: echo Hello, world!.
+
+  job1:
+    runs-on: ubuntu-latest
+
+    variables:
+      monTexte: "Bonjour le monde"
+    steps:
+    - uses: actions/checkout@v3
+    - name: Run a one-line script
+      run: echo $montexte
