--- a/.github/workflows/HelloWorld.yml
+++ b/.github/workflows/HelloWorld.yml
@@ -1,8 +1,8 @@
 name: HelloWorld
 on: [push]
+env:
+  maVar: "var"
 jobs:
-
-  
 
   job1:
     runs-on: ubuntu-latest
@@ -14,7 +14,7 @@ jobs:
 
   job2:
     runs-on: ubuntu-latest
-    variables:
+    env:
       monTexte: "Bonjour le monde"
     steps:
     - uses: actions/checkout@v3
