--- a/.github/workflows/HelloWorld.yml
+++ b/.github/workflows/HelloWorld.yml
@@ -5,6 +5,7 @@ env:
 jobs:
 
   job1:
+    on: push
     runs-on: ubuntu-latest
 
     steps:
@@ -13,6 +14,7 @@ jobs:
       run: echo Hello, world!.
 
   job2:
+    on: pull_request
     runs-on: ubuntu-latest
     env:
       monTexte: "Bonjour le monde"
